@@ -139,11 +139,6 @@ extern bool node_features_g_user_update(uid_t uid);
 /* Return estimated reboot time, in seconds */
 extern uint32_t node_features_g_boot_time(void);
 
-/*
- * Return node "weight" field if reboot required to change mode
- */
-extern uint32_t node_features_g_reboot_weight(void);
-
 /* Get node features plugin configuration */
 extern List node_features_g_get_config(void);
 
