@@ -153,6 +153,7 @@ documents those changes that are of interest to users and administrators.
  -- Have 'scontrol show hostlist -' read from stdin.
  -- Extend support for Include files to all "configless" client commands.
  -- Make node weight usable for powered down and rebooting nodes.
+ -- node_features plugins - node_features_p_reboot_weight() function removed.
 
 * Changes in Slurm 22.05.7
 ==========================
